# ReportScheduler

./: .gitignore  GETTING_STARTED.md  README.md  docker-compose.yml
.github/: auto-assign.yml  labeler.yml
.github/workflows/: README.md  backend-ci-cd.yml  frontend-ci-cd.yml  infrastructure-ci-cd.yml  pr-checks.yml  security-scanning.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_initial_schema.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/middleware/: __init__.py
backend/src/api/routes/: __init__.py  health.py  schedules.py
backend/src/api/schemas/: schedule.py
backend/src/domain/interfaces/: schedule_repository.py
backend/src/domain/services/: audit_service.py  burst_protection.py  schedule_service.py
backend/src/infrastructure/azure/: __init__.py  blob_storage.py
backend/src/infrastructure/cache/: __init__.py  report_cache.py
backend/src/infrastructure/database/: models.py  session.py
backend/src/infrastructure/database/repositories/: postgres_schedule_repository.py
backend/src/infrastructure/email/: __init__.py  email_service.py
backend/src/scheduler/: __init__.py  scheduler_loop.py
backend/src/utils/: cron.py  date_ranges.py
backend/src/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_health.py
docs/: code-guidelines.md  design.md  infrastructure.md  plan.md
frontend/: .gitignore  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: executions.ts  reports.ts  schedules.ts
frontend/src/types/: index.ts
frontend/src/views/: DashboardView.vue  ExecutionsView.vue  GalleryView.vue  ReportsView.vue  SchedulesView.vue
infrastructure/: .gitignore  README.md  SETUP_GUIDE.md  deploy.ps1
infrastructure/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/environments/prod/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/: providers.tf
infrastructure/modules/cache/: main.tf  outputs.tf  variables.tf
infrastructure/modules/database/: main.tf  outputs.tf  variables.tf
infrastructure/modules/keyvault/: main.tf  variables.tf
infrastructure/modules/messaging/: main.tf  outputs.tf  variables.tf
infrastructure/modules/monitoring/: main.tf  outputs.tf  variables.tf
infrastructure/modules/network/: main.tf  outputs.tf  variables.tf
infrastructure/modules/storage/: main.tf  outputs.tf  variables.tf
pipelines/: README.md  azure-pipelines-backend.yml  azure-pipelines-frontend.yml  azure-pipelines-infrastructure.yml
(+6 files in other folders)
