[tool.poetry]
name = "reportscheduler-backend"
version = "1.0.0"
description = "Multi-tenant report scheduling platform backend"
authors = ["Platform Team <team@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.13.0"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
celery = {extras = ["redis"], version = "^5.3.4"}
redis = "^5.0.1"
apscheduler = "^3.10.4"
liquidpy = "^0.8.2"
weasyprint = "^60.1"
httpx = "^0.25.2"
pyodbc = "^5.0.1"
azure-storage-blob = "^12.19.0"
azure-servicebus = "^7.11.4"
azure-communication-email = "^1.0.0"
azure-identity = "^1.15.0"
opencensus-ext-azure = "^1.1.13"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
croniter = "^2.0.1"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.8"
mypy = "^1.7.1"
bandit = "^1.7.5"
locust = "^2.20.0"
httpx = "^0.25.2"
faker = "^20.1.0"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "apscheduler.*",
    "liquidpy.*",
    "weasyprint.*",
    "opencensus.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # assert_used (allowed in tests)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
